traefik/base/auth-error.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth-errors
  namespace: default
spec:
  errors:
    status:
      - "401"
    service:
      name: oauth2-proxy
      namespace: auth
      port: 80
    query: "/oauth2/start?rd={url}"
