traefik/base/casdoor-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: casdoor-auth
  namespace: default
spec:
  forwardAuth:
    address: http://oauth2-proxy.auth.svc.cluster.local/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Groups
      - Authorization
