traefik/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: default
spec:
  routes:
    - match: Host(`traefik.mydomain.com`) && PathPrefix(`/api`) || PathPrefix(`/dashboard`)
      kind: Rule
      middlewares:
        - name: auth
          namespace: default 
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: tls-certificate
